// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContributorsEditor tests  rendering full component with a defined className 1`] = `
<div>
  <Connect(ContributorForm)
    isNtro={false}
    onAdd={[Function]}
    showContributorAssignment={false}
    showIdentifierLookup={false}
    showRoleInput={false}
  />
</div>
`;

exports[`ContributorsEditor tests  rendering full component with identifier lookup 1`] = `
<div>
  <Connect(ContributorForm)
    isNtro={false}
    onAdd={[Function]}
    showContributorAssignment={false}
    showIdentifierLookup={true}
    showRoleInput={false}
  />
</div>
`;

exports[`ContributorsEditor tests  rendering full component with role input 1`] = `
<div>
  <Connect(ContributorForm)
    isNtro={false}
    onAdd={[Function]}
    showContributorAssignment={false}
    showIdentifierLookup={false}
    showRoleInput={true}
  />
</div>
`;

exports[`ContributorsEditor tests  renders 3 contributor rows with no infinite scroll 1`] = `
<div>
  <Connect(ContributorForm)
    isNtro={false}
    onAdd={[Function]}
    showContributorAssignment={false}
    showIdentifierLookup={false}
    showRoleInput={false}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(ContributorRowHeader)
          isInfinite={false}
          isNtro={false}
          onDeleteAll={[Function]}
          showContributorAssignment={false}
          showIdentifierLookup={false}
          showRoleInput={false}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "list ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(ContributorRow)))
          canMoveDown={true}
          canMoveUp={false}
          contributor={
            Object {
              "nameAsPublished": 1,
            }
          }
          disabledContributorAssignment={false}
          index={0}
          key="ContributorRow_0"
          onContributorAssigned={[Function]}
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
          showContributorAssignment={false}
          showIdentifierLookup={false}
          showRoleInput={false}
        />
        <WithStyles(WithTheme(WithWidth(ContributorRow)))
          canMoveDown={true}
          canMoveUp={true}
          contributor={
            Object {
              "nameAsPublished": 2,
            }
          }
          disabledContributorAssignment={false}
          index={1}
          key="ContributorRow_1"
          onContributorAssigned={[Function]}
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
          showContributorAssignment={false}
          showIdentifierLookup={false}
          showRoleInput={false}
        />
        <WithStyles(WithTheme(WithWidth(ContributorRow)))
          canMoveDown={false}
          canMoveUp={true}
          contributor={
            Object {
              "nameAsPublished": 3,
            }
          }
          disabledContributorAssignment={false}
          index={2}
          key="ContributorRow_2"
          onContributorAssigned={[Function]}
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
          showContributorAssignment={false}
          showIdentifierLookup={false}
          showRoleInput={false}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ContributorsEditor tests  renders 4 contributor rows wrapped in an infinite scroll 1`] = `
<div>
  <Connect(ContributorForm)
    isNtro={false}
    onAdd={[Function]}
    showContributorAssignment={false}
    showIdentifierLookup={false}
    showRoleInput={false}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(ContributorRowHeader)
          isInfinite={true}
          isNtro={false}
          onDeleteAll={[Function]}
          showContributorAssignment={false}
          showIdentifierLookup={false}
          showRoleInput={false}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "list scroll",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(ContributorRow)))
          canMoveDown={true}
          canMoveUp={false}
          contributor={
            Object {
              "displayName": 1,
            }
          }
          disabledContributorAssignment={false}
          index={0}
          key="ContributorRow_0"
          onContributorAssigned={[Function]}
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
          showContributorAssignment={false}
          showIdentifierLookup={false}
          showRoleInput={false}
        />
        <WithStyles(WithTheme(WithWidth(ContributorRow)))
          canMoveDown={true}
          canMoveUp={true}
          contributor={
            Object {
              "displayName": 2,
            }
          }
          disabledContributorAssignment={false}
          index={1}
          key="ContributorRow_1"
          onContributorAssigned={[Function]}
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
          showContributorAssignment={false}
          showIdentifierLookup={false}
          showRoleInput={false}
        />
        <WithStyles(WithTheme(WithWidth(ContributorRow)))
          canMoveDown={true}
          canMoveUp={true}
          contributor={
            Object {
              "displayName": 3,
            }
          }
          disabledContributorAssignment={false}
          index={2}
          key="ContributorRow_2"
          onContributorAssigned={[Function]}
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
          showContributorAssignment={false}
          showIdentifierLookup={false}
          showRoleInput={false}
        />
        <WithStyles(WithTheme(WithWidth(ContributorRow)))
          canMoveDown={false}
          canMoveUp={true}
          contributor={
            Object {
              "displayName": 4,
            }
          }
          disabledContributorAssignment={false}
          index={3}
          key="ContributorRow_3"
          onContributorAssigned={[Function]}
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
          showContributorAssignment={false}
          showIdentifierLookup={false}
          showRoleInput={false}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ContributorsEditor tests  renders no contributor rows with no infinite scroll 1`] = `
<div>
  <Connect(ContributorForm)
    isNtro={false}
    onAdd={[Function]}
    showContributorAssignment={false}
    showIdentifierLookup={false}
    showRoleInput={false}
  />
</div>
`;

exports[`ContributorsEditor tests  should show validation error 1`] = `
<div>
  <Connect(ContributorForm)
    isNtro={false}
    onAdd={[Function]}
    showContributorAssignment={false}
    showIdentifierLookup={false}
    showRoleInput={false}
  />
  <WithStyles(Typography)
    color="error"
    variant="caption"
  >
    This is a test error
  </WithStyles(Typography)>
</div>
`;
